Try and fix animation problem on ios8

--- a/app/assets/stylesheets/plants.scss
+++ b/app/assets/stylesheets/plants.scss
@@ -54,7 +54,6 @@ body.standalone {
   top: 80px;
   bottom: 0;
   right: 0;
-  width: 320px;
   background: #fff;
 }
 
